--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "author": "suxxus",
   "license": "ISC",
   "dependencies": {
+    "immutable": "3.8.1",
+    "immutable-ext": "1.0.8",
     "ramda": "0.23.0"
   }
 }
